trunk/Archive2/84/5625b9a83b71ec/output
main.cpp:17:38: error: non-member function cannot have 'const' qualifier
std::string to_string(pooper const&) const {
                                     ^~~~~~
1 error generated.
